# rootless-devcontainers

./: README.md
JS+Vite+React/: README.md
JS+Vite+React/.devcontainer/: Dockerfile  README.md  devcontainer.json
Python+Poetry+FastAPI/: .gitignore  README.md  pyproject.toml
Python+Poetry+FastAPI/.devcontainer/: Dockerfile  README.md  devcontainer.json
Python+Poetry+FastAPI/.scripts/: vscode_setting.sh
