[project]
name = "time-messenger"
license = "MIT"
version = "0.3.0"
description = "A Python Time Messenger Driver"
authors = [
    {name = "Tinkoff Team",email = "python@tbank.ru"},
    {name = "Ivanov Maksim Olegovich",email = "m.o.ivanov@tbank.ru"}
]
readme = "README.md"
repository = "https://gitlab.tcsbank.ru/python/time-messenger"

# Минимальная версия Python, с которой совместим пакет black, python 3.9
requires-python = ">=3.9,<4.0"
dependencies = [
    "aiohttp (>=3.8.1,<4.0.0)",
    "httpx (>=0.20.0,<1.0.0)",
]

[[tool.poetry.source]]
name = "tbank-pypi"
url = "https://artifactory.tcsbank.ru/artifactory/api/pypi/python-all/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
flask = "^3.1.0"
uvicorn = "^0.34.0"
starlette = "^0.45.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py36']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["examples", "tests"]
multi_line_output = 3
line_length = 120


[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # конфликтует с форматированием Black (лишний пробел перед двоеточием)
    "W503"   # разрыв строки перед бинарным оператором (Black предпочитает обратное)
]

[project.urls]
Repository = "https://gitlab.tcsbank.ru/python/time-messenger"
HomePage = "https://wiki.tcsbank.ru/display/IAM/Python"
Issues = "https://gitlab.tcsbank.ru/python/time-messenger"
